# Agent-Dispatch-System

./: README.md  main.py  makefile  pyproject.toml
alembic/: env.py
core/: config.py  handle.py  logger.py  router.py  schemes.py
core/features/audits_log/: models.py  repository.py  router.py  scheme.py  service.py
core/features/dispatch/: models.py  prompt.py  router.py  service.py
core/features/tasks/: models.py  repository.py  router.py  scheme.py  service.py
core/features/tasks_chat/: models.py  repository.py  scheme.py  service.py
core/features/tasks_history/: models.py  repository.py  scheme.py  service.py
core/features/tasks_unit/: models.py  repository.py  scheme.py  service.py
core/features/tasks_workspace/: models.py  repository.py  router.py  scheme.py  service.py
core/shared/: enums.py  exceptions.py  globals.py
core/shared/base/: models.py  scheme.py
core/shared/components/: __init__.py
core/shared/components/openai/: agent.py
core/shared/components/redis/: broker.py  cacher.py  session.py
core/shared/database/: connection.py  redis.py  session.py
core/shared/models/: http.py
