[project]
name = "agent-dispatch-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.1",
    "alembic>=1.16.4",
    "asyncmy>=0.2.10",
    "colorlog>=6.9.0",
    "fastapi>=0.116.1",
    "greenlet>=3.2.4",
    "openai-agents[litellm]>=0.2.6",
    "openai>=1.99.9",
    "pydantic-settings>=2.10.1",
    "pymysql>=1.1.1",
    "pytz>=2025.2",
    "redis[hiredis]>=6.4.0",
    "ruff>=0.12.8",
    "socksio>=1.0.0",
    "sqlalchemy>=2.0.42",
    "uvicorn>=0.35.0",
    "asyncache>=0.3.1",
]
